# qqrl

./: .env.sample  .gitignore  .mcp.json  AGENTS.md  Cargo.toml  README.md  TODO.md  qqrl.code-workspace  test.cmd
.agents/skills/serena/: SKILL.md
.roo/: mcp.json
.serena/: project.yml
doc/: 2026-03-24_initial-stages.md  2026-03-24_l2b_rewrite_plan.md  2026-03-26 issue-value.md  COMPATIBILITY.md  issue-missing-tables.md  issue-value.md  rledger-issues.md  usage.md
doc/completed-projects/: 2026-03-24_l2b_rewrite_plan.md  2026-03-26 issue-value.md
src/: cli.rs  config.rs  date_parser.rs  main.rs  runner.rs  utils.rs
src/commands/: assert.rs  balance.rs  lots.rs  mod.rs  price.rs  query.rs  register.rs
tests/: balance-exchange.out  balance_tests.rs  balances.out  compatibility-tests.md  compatibility.clitest  convert.out  cost_number.out  lots_tests.rs  phase0-test.clitest  phase0-test.cmd  prices.out  query-accounts.out  query_tests.rs  register_tests.rs  rewrite_regression_tests.rs  sample-ledger.bean  setenv.cmd  sum-convert-position.out  zero-net-position.bean
