[package]
name = "qqrl"
version = "0.5.3"
description = "Quick Query for Rust Ledger"
edition = "2021"
license = "AGPL-3.0"
authors = ["Alen Šiljak"]
repository = "https://github.com/alensiljak/qqrl"

readme = "README.md"
categories = ["command-line-utilities", "finance"]
keywords = ["beancount", "query", "finance", "cli"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
thiserror = "1"
chrono = "0.4"
regex = "1"
rust_decimal = "1"
comfy-table = "7"
